tests/semantic/comp_types/comp_types.err
Error: Unable to deduce type for variable x in file comp_types.dl at line 32
relX(x) :- relY(x).
-----^--------------
Following constraints are incompatible:
   Type of variable 'x' should be a subtype of 'x.inner'
   Type of variable 'x' should be a subtype of 'y.inner' in file comp_types.dl at line 32
relX(x) :- relY(x).
-----------^--------
Error: Unable to deduce type for variable x in file comp_types.dl at line 33
relX(x) :- relZ(x).
-----^--------------
Following constraints are incompatible:
   Type of variable 'x' should be a subtype of 'x.inner'
   Type of variable 'x' should be a subtype of 'z.inner' in file comp_types.dl at line 33
relX(x) :- relZ(x).
-----------^--------
Error: Unable to deduce type for variable x in file comp_types.dl at line 35
relY(x) :- relX(x).
-----^--------------
Following constraints are incompatible:
   Type of variable 'x' should be a subtype of 'x.inner' in file comp_types.dl at line 35
relY(x) :- relX(x).
-----------^--------
   Type of variable 'x' should be a subtype of 'y.inner'
Error: Unable to deduce type for variable x in file comp_types.dl at line 37
relY(x) :- relZ(x).
-----^--------------
Following constraints are incompatible:
   Type of variable 'x' should be a subtype of 'y.inner'
   Type of variable 'x' should be a subtype of 'z.inner' in file comp_types.dl at line 37
relY(x) :- relZ(x).
-----------^--------
Error: Unable to deduce type for variable x in file comp_types.dl at line 39
relZ(x) :- relX(x).
-----^--------------
Following constraints are incompatible:
   Type of variable 'x' should be a subtype of 'x.inner' in file comp_types.dl at line 39
relZ(x) :- relX(x).
-----------^--------
   Type of variable 'x' should be a subtype of 'z.inner'
Error: Unable to deduce type for variable x in file comp_types.dl at line 40
relZ(x) :- relY(x).
-----^--------------
Following constraints are incompatible:
   Type of variable 'x' should be a subtype of 'y.inner' in file comp_types.dl at line 40
relZ(x) :- relY(x).
-----------^--------
   Type of variable 'x' should be a subtype of 'z.inner'
6 errors generated, evaluation aborted